@@ -12,6 +12,7 @@ Version Next
     - Fixed bug in AbstractUnsizedContainer
     - Added new "pobj.distrib" package for multi-node synchronization
     - Added PersistentObject read() and write() method variants
+    - Added WritableResource
     - Added AbstractBean
 
 Version 1.0.704 Released August 28, 2013
